<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/exit_dialog"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_cross" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reset_all_filter_first"
        android:textAlignment="center"
        android:textColor="@color/super_dark_grey"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reset_all_filter_second"
        android:textColor="@color/super_dark_grey"
        android:textSize="17sp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/clear_list"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />
</LinearLayout>