<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/exit_add_disl_ing_dialog"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_cross" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_disl_ing_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/input_disl_ing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_disl_ing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/add_ing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/cancel_add_disl_ing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:fontFamily="sans-serif-thin"
        android:padding="0dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>