<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/shop_list_exit_add_ing_dialog"
            android:layout_width="37dp"
            android:layout_height="33dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_cross" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/input_ing_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/input_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ing_quantity"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ing_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_quantity"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/udm_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:text="@string/aisle"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/aisle_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp" />
        </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_recipe"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_quantity" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_ingredient_shop_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/light_green"
        android:fontFamily="sans-serif-thin"
        android:padding="0dp"
        android:text="@string/add_ing"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/cancel_add_ingredient_shop_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:fontFamily="sans-serif-thin"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />
</LinearLayout>
