<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_shopping_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.cookingtime.Activities.ShoppingListActivity"
    tools:showIn="@layout/app_bar_shopping_list"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/super_dark_grey"
            android:orientation="horizontal">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/shopping_list_aisle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/aisles"
                    android:textColor="@drawable/radio_button_text_color"
                    android:buttonTint="@color/radio_button_tint"/>

                <RadioButton
                    android:id="@+id/shopping_list_recipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/recipes"
                    android:textColor="@drawable/radio_button_text_color"
                    android:buttonTint="@color/radio_button_tint"/>
            </RadioGroup>

            <!-- TODO aggiungere background e count della lista -->
            <ImageView
                android:id="@+id/shopping_list_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:onClick="openAddIngredientDialog"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/ic_add" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/aisle_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/got_it_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_bag" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/got_it"
                        android:textColor="@color/super_dark_grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/clear_got_it"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/transparent"
                        android:text="@string/clear"
                        android:textColor="@color/light_green" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/shopping_list_got_it_rec_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>